# kubescribe

./: .gitignore  KubeScribe-Investigation.md  LICENSE  README.md
api-service/: .env.example  Dockerfile  README.md  pyproject.toml
api-service/app/: config.py  db.py  k8s.py  main.py
api-service/app/routers/: opslog.py  report.py  runs.py
api-service/tests/: test_health.py
core-runner/: .env.example  Dockerfile  README.md  pyproject.toml
core-runner/scripts/: local_run.sh
core-runner/src/kubescribe_core_runner/: __init__.py  config.py  db.py  main.py  notify.py  opslog.py  pipeline.py
core-runner/tests/: test_import.py
infra/api/: deployment.yaml  rbac.yaml  service.yaml
infra/core-runner/: cronjob.yaml  job-template.yaml  secret.example.yaml
infra/opslog/: .env  .env.example  README.md  docker-compose.yml
infra/opslog/init/: 01_extensions.sql  02_schema.sql  03_seed.sql
